# stm32l476-baremetal-blinky

./: .gitignore  CMakeLists.txt  README.md  main.c  toolchain.cmake
.cache/clangd/index/: board.h.73CD11250A252D9D.idx  main.c.A3E3F9481B54D102.idx  startup.s.B6B2799EF6B91404.idx  stm32f0_regs.h.5552621652F0387C.idx  system.c.8B5B2EF9D918C1BE.idx  systick.c.E692D07501ECED90.idx  systick.h.EAFBEED0438BDF46.idx
Include/: board.h  stm32f0_regs.h  systick.h
linker/: memory.ld
src/: main.c  stm32f0_regs.h  system.c  systick.c
startup/: startup.s
